# stereotype-detector

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py  style.css
src/: llm_service.py  output_parser.py  prompts.py
