[project]
name = "stereotypedetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "mlflow>=3.14.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
    "typing>=3.10.0.0",
]
